deploy/kubernetes/base/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paryty-frontend
  namespace: paryty
  labels:
    app.kubernetes.io/name: paryty-frontend
    app.kubernetes.io/component: frontend
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: paryty-frontend
